Fix a case where the accessible bounding box of an inline text box was wrong.

The local bounds of an inline text box is relative to the same box as its
LayoutText, not relative to the LayoutText itself. Subtract the LayoutText
origin from the InlineTextBox coordinates and add some new tests to cover
this case.

BUG=650440

Review-Url: https://codereview.chromium.org/2372823002
Cr-Commit-Position: refs/heads/master@{#421568}

Former-commit-id: dbdcf389f7e2055c8c986c5ccaec6c46180ee19b